--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
